--- a/page-contact-2.html
+++ b/page-contact-2.html
@@ -16,7 +16,7 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" type="text/css" href="style.css">
-
+    
     <!-- Colors -->
     <link rel="stylesheet" type="text/css" href="assets/css/colors/color1.css" id="colors">
 
@@ -31,7 +31,7 @@
 
 </head>
 
-<body class="header-fixed page no-sidebar header-style-2 topbar-style-2 menu-has-search">
+<body class="header-fixed page no-sidebar header-style-2 topbar-style-1 menu-has-search">
 
 <div id="wrapper" class="animsition">
     <div id="page" class="clearfix">
@@ -42,11 +42,11 @@
                 <div id="top-bar-inner" class="container">
                     <div class="top-bar-inner-wrap">
                         <div class="top-bar-content">
-                            <div class="inner">
+                             <div class="inner">
                                 <span class="address content">HB BuildingWorks Inc. (USA)</span>
                                 <span class="phone content">+1 (773)901-0254</span>
                                 <span class="time content">Mon-Sat: 8am - 6pm</span>
-                            </div>                              
+                            </div>                             
                         </div><!-- /.top-bar-content -->
 
                         <div class="top-bar-socials">
@@ -55,8 +55,8 @@
                                 <span class="icons">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <!-- <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                                    <a href="#"><i class="fa fa-rss"></i></a> -->
+                                    <a href="#"><i class="fa fa-pinterest-p"></i></a>
+                                    <a href="#"><i class="fa fa-rss"></i></a>
                                 </span>
                             </div>
                         </div><!-- /.top-bar-socials -->
@@ -71,7 +71,7 @@
                         <div id="site-logo" class="clearfix">
                             <div id="site-log-inner">
                                 <a href="index.html" rel="home" class="main-logo">
-                                    <img src="" alt="HB(Hafarb) BuildWorks" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
+                                    <img src="assets/img/logo-small.png" alt="Autora" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
                                 </a>
                             </div>
                         </div><!-- /#site-logo -->
@@ -80,7 +80,7 @@
                             <span></span>
                         </div><!-- /.mobile-button -->
 
-                        <nav id="main-nav" class="main-nav">
+                         <nav id="main-nav" class="main-nav">
                             <ul id="menu-primary-menu" class="menu">
                                 <li class="menu-item menu-item-has-children current-menu-item">
                                     <a href="index.html">HOME</a>
@@ -349,31 +349,30 @@
                         <div class="widget widget_text">
                             <div class="textwidget">
                                 <p>
-                                    <!-- <img src="assets/img/logo-white%402x.png" alt="Image" width="170" height="34"> -->
-                                     HB (Hafarb) BuildWorks
+                                    <img src="assets/img/logo-white%402x.png" alt="Image" width="170" height="34">
                                 </p>
 
-                                <p class="margin-bottom-15">HB (Hafarb) BuildWorks has over 14 years of experience in architecture, design-build, and construction delivery.</p>
+                                <p class="margin-bottom-15">We have over 15 years of experien able to help you 24 hours a day.</p>
 
                                 <ul>
                                     <li>
                                         <div class="inner">
                                             <span class="fa fa-map-marker"></span>
-                                            <span class="text">The firm operates through HB BuildingWorks Inc. (USA) <span class="sl">Chicago</span></span>
+                                            <span class="text">PO BOX 16122 COLLINS STREET <span class="sl">West Victoria, NewYork</span></span>
                                         </div>
                                     </li>
 
                                     <li>
                                         <div class="inner">
                                             <span class="fa fa-phone"></span>
-                                            <span class="text">CALL US : +1 (773)901-0254</span>
+                                            <span class="text">CALL US : (+61) 3 8376 6284</span>
                                         </div>
                                     </li>
 
                                     <li class="margin-top-7">
                                         <div class="inner">
                                             <span class=" font-size-14 fa fa-envelope"></span>
-                                            <span class="text">hbworks.ng@gmail.com</span>
+                                            <span class="text">SUPPORT@NICHE_THEME</span>
                                         </div>
                                     </li>
                                 </ul>
@@ -514,13 +513,13 @@
             <div id="bottom-bar-inner" class="container">
                 <div class="bottom-bar-inner-wrap">
                     <div class="bottom-bar-content">
-                        <div id="copyright">© <span class="text"><a href="https://www.templateshub.net" class="text-accent">Lotus-Gold</a></span> 
+                        <div id="copyright">© <span class="text"><a href="https://www.templateshub.net" class="text-accent">Templates Hub</a></span> 
                         </div>
                     </div><!-- /.bottom-bar-content -->
 
-                    <!-- <div class="bottom-bar-menu">
+                    <div class="bottom-bar-menu">
                         <ul class="bottom-nav">
-                            <li class="menu-item current-menu-item">
+                            <li class="menu-item">
                                 <a href="index.html">HOME</a>
                             </li>
                             <li class="menu-item">
@@ -535,14 +534,14 @@
                             <li class="menu-item">
                                 <a href="page-testimonial.html">PAGE</a>
                             </li>
-                            <li class="menu-item ">
+                            <li class="menu-item">
                                 <a href="page-blog.html">BLOG</a>
                             </li>
-                            <li class="menu-item">
+                            <li class="menu-item current-menu-item">
                                 <a href="page-contact.html">CONTACT</a>
                             </li>
                         </ul>
-                    </div>/.bottom-bar-menu -->
+                    </div><!-- /.bottom-bar-menu -->
                 </div><!-- /.bottom-bar-inner-wrap -->                
             </div><!-- /#bottom-bar-inner -->
         </div><!-- /#bottom -->
@@ -568,6 +567,7 @@
 <script src="assets/js/gmap3.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIEU6OT3xqCksCetQeNLIPps6-AYrhq-s&amp;region=GB"></script>
 <script src="assets/js/shortcodes.js"></script>
+<script src="assets/js/jquery-validate.js"></script>
 <script src="assets/js/main.js"></script>
 
 <!-- Revolution Slider -->
@@ -586,6 +586,7 @@
 <script src="includes/rev-slider/js/extensions/revolution.extension.video.min.js"></script>
 
 </body>
+
 
 </html>
 
