--- a/page-contact-2.html
+++ b/page-contact-2.html
@@ -80,59 +80,59 @@
                             <span></span>
                         </div><!-- /.mobile-button -->
 
-                         <nav id="main-nav" class="main-nav">
+                        <nav id="main-nav" class="main-nav">
                             <ul id="menu-primary-menu" class="menu">
-                                <li class="menu-item menu-item-has-children current-menu-item">
+                                <li class="menu-item menu-item-has-children">
                                     <a href="index.html">HOME</a>
-                                    <!-- <ul class="sub-menu">
-                                        <li class="menu-item current-item"><a href="index.html">HOME 1</a></li>
-                                        <li class="menu-item"><a href="home-2.html">HOME</a></li>
-                                    </ul> -->
+                                    <ul class="sub-menu">
+                                        <li class="menu-item"><a href="index.html">HOME 1</a></li>
+                                        <li class="menu-item"><a href="home-2.html">HOME 2</a></li>
+                                    </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children">
                                     <a href="page-about.html">ABOUT US </a>
-                                    <!-- <ul class="sub-menu">
+                                    <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-about.html">ABOUT US</a></li>
                                         <li class="menu-item"><a href="page-about-detail.html">ABOUT DETAIL</a></li>
                                         <li class="menu-item"><a href="page-about-team.html">ABOUT TEAM</a></li>
                                         <li class="menu-item"><a href="page-about-careers.html">ABOUT CAREERS</a></li>
-                                    </ul> -->
+                                    </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children">
-                                    <a href="page-services-detail.html">SERVICES</a>
-                                    <!-- <ul class="sub-menu">
+                                    <a href="page-services.html">SERVICES</a>
+                                    <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-services.html">SERVICES</a></li>
                                         <li class="menu-item"><a href="page-services-detail.html">SERVICES DETAIL</a></li>
-                                    </ul> -->
+                                    </ul>
                                 </li>
-                               <li class="menu-item menu-item-has-children">
+                                <li class="menu-item menu-item-has-children">
                                     <a href="page-projects.html">PROJECTS</a>
-                                    <!-- <ul class="sub-menu">
+                                    <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-projects.html">PROJECTS</a></li>
                                         <li class="menu-item"><a href="page-projects-full.html">PROJECTS FULL WIDTH</a></li>
                                         <li class="menu-item"><a href="page-project-detail.html">PROJECTS DETAIL</a></li>
-                                    </ul> -->
+                                    </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children" >
                                     <a href="page-testimonial.html">PAGE</a>
-                                    <!-- <ul class="sub-menu">
+                                    <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-testimonial.html">PAGE TESTIMONIAL</a></li>
                                         <li class="menu-item"><a href="page-pricing.html">PAGE PRICING</a></li>
-                                    </ul> -->
+                                    </ul>
                                 </li>
-                                <!-- <li class="menu-item menu-item-has-children">
+                                <li class="menu-item menu-item-has-children">
                                     <a href="page-blog.html">BLOG</a>
                                     <ul class="sub-menu right-sub-menu">
                                         <li class="menu-item"><a href="page-blog.html">BLOG</a></li>
                                         <li class="menu-item"><a href="page-blog-single.html">BLOG SINGLE</a></li>
                                     </ul>
-                                </li> -->
-                                <li class="menu-item menu-item-has-children">
-                                    <a href="page-contact-2.html">CONTACT</a>
-                                    <!-- <ul class="sub-menu right-sub-menu">
-                                        <li class="menu-item"><a href="page-contact.html">CONTACT 1</a></li>
+                                </li>
+                                <li class="menu-item menu-item-has-children current-menu-item">
+                                    <a href="page-contact.html">CONTACT</a>
+                                    <ul class="sub-menu right-sub-menu">
+                                        <li class="menu-item current-item"><a href="page-contact.html">CONTACT 1</a></li>
                                         <li class="menu-item"><a href="page-contact-2.html">CONTACT 2</a></li>
-                                    </ul> -->
+                                    </ul>
                                 </li>
                             </ul>
                         </nav><!-- /#main-nav -->
@@ -349,31 +349,30 @@
                         <div class="widget widget_text">
                             <div class="textwidget">
                                 <p>
-                                    <!-- <img src="assets/img/logo-white%402x.png" alt="Image" width="170" height="34"> -->
-                                     HB (Hafarb) BuildWorks
+                                    <img src="assets/img/logo-white%402x.png" alt="Image" width="170" height="34">
                                 </p>
 
-                                <p class="margin-bottom-15">HB (Hafarb) BuildWorks has over 14 years of experience in architecture, design-build, and construction delivery.</p>
+                                <p class="margin-bottom-15">We have over 15 years of experien able to help you 24 hours a day.</p>
 
                                 <ul>
                                     <li>
                                         <div class="inner">
                                             <span class="fa fa-map-marker"></span>
-                                            <span class="text">The firm operates through HB BuildingWorks Inc. (USA) <span class="sl">Chicago</span></span>
+                                            <span class="text">PO BOX 16122 COLLINS STREET <span class="sl">West Victoria, NewYork</span></span>
                                         </div>
                                     </li>
 
                                     <li>
                                         <div class="inner">
                                             <span class="fa fa-phone"></span>
-                                            <span class="text">CALL US : +1 (773)901-0254</span>
+                                            <span class="text">CALL US : (+61) 3 8376 6284</span>
                                         </div>
                                     </li>
 
                                     <li class="margin-top-7">
                                         <div class="inner">
                                             <span class=" font-size-14 fa fa-envelope"></span>
-                                            <span class="text">hbworks.ng@gmail.com</span>
+                                            <span class="text">SUPPORT@NICHE_THEME</span>
                                         </div>
                                     </li>
                                 </ul>
@@ -514,13 +513,13 @@
             <div id="bottom-bar-inner" class="container">
                 <div class="bottom-bar-inner-wrap">
                     <div class="bottom-bar-content">
-                        <div id="copyright">© <span class="text"><a href="https://www.templateshub.net" class="text-accent">Lotus-Gold</a></span> 
+                        <div id="copyright">© <span class="text"><a href="https://www.templateshub.net" class="text-accent">Templates Hub</a></span> 
                         </div>
                     </div><!-- /.bottom-bar-content -->
 
-                    <!-- <div class="bottom-bar-menu">
+                    <div class="bottom-bar-menu">
                         <ul class="bottom-nav">
-                            <li class="menu-item current-menu-item">
+                            <li class="menu-item">
                                 <a href="index.html">HOME</a>
                             </li>
                             <li class="menu-item">
@@ -535,14 +534,14 @@
                             <li class="menu-item">
                                 <a href="page-testimonial.html">PAGE</a>
                             </li>
-                            <li class="menu-item ">
+                            <li class="menu-item">
                                 <a href="page-blog.html">BLOG</a>
                             </li>
-                            <li class="menu-item">
+                            <li class="menu-item current-menu-item">
                                 <a href="page-contact.html">CONTACT</a>
                             </li>
                         </ul>
-                    </div>/.bottom-bar-menu -->
+                    </div><!-- /.bottom-bar-menu -->
                 </div><!-- /.bottom-bar-inner-wrap -->                
             </div><!-- /#bottom-bar-inner -->
         </div><!-- /#bottom -->
@@ -568,6 +567,7 @@
 <script src="assets/js/gmap3.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIEU6OT3xqCksCetQeNLIPps6-AYrhq-s&amp;region=GB"></script>
 <script src="assets/js/shortcodes.js"></script>
+<script src="assets/js/jquery-validate.js"></script>
 <script src="assets/js/main.js"></script>
 
 <!-- Revolution Slider -->
@@ -586,6 +586,7 @@
 <script src="includes/rev-slider/js/extensions/revolution.extension.video.min.js"></script>
 
 </body>
+
 
 </html>
 
