--- a/page-contact-2.html
+++ b/page-contact-2.html
@@ -513,12 +513,11 @@
         <div id="bottom" class="clearfix has-spacer">
             <div id="bottom-bar-inner" class="container">
                 <div class="bottom-bar-inner-wrap">
-                    <div class="bottom-bar-content">
-                        <div id="copyright">© <span class="text"><a href="https://www.templateshub.net" class="text-accent">Templates Hub</a></span> 
+                     <div class="bottom-bar-content">
+                        <div id="copyright">© <span class="text"><a href="https://www.templateshub.net" class="text-accent">Lotus-Gold</a></span> 
                         </div>
                     </div><!-- /.bottom-bar-content -->
-
-                    <div class="bottom-bar-menu">
+                    <!-- <div class="bottom-bar-menu">
                         <ul class="bottom-nav">
                             <li class="menu-item">
                                 <a href="index.html">HOME</a>
@@ -541,7 +540,7 @@
                             <li class="menu-item current-menu-item">
                                 <a href="page-contact.html">CONTACT</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div><!-- /.bottom-bar-menu -->
                 </div><!-- /.bottom-bar-inner-wrap -->                
             </div><!-- /#bottom-bar-inner -->
