--- a/page-contact-2.html
+++ b/page-contact-2.html
@@ -55,8 +55,8 @@
                                 <span class="icons">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                                    <a href="#"><i class="fa fa-rss"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-pinterest-p"></i></a>
+                                    <a href="#"><i class="fa fa-rss"></i></a> -->
                                 </span>
                             </div>
                         </div><!-- /.top-bar-socials -->
