--- a/page-about.html
+++ b/page-about.html
@@ -90,7 +90,7 @@
                                     </ul> -->
                                 </li>
                                 <li class="menu-item menu-item-has-children">
-                                    <a href="page-about.html">HB (Hafarb) BuildWorks</a>
+                                    <a href="page-about.html">ABOUT US</a>
                                     <!-- <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-about.html">ABOUT US</a></li>
                                         <li class="menu-item"><a href="page-about-detail.html">ABOUT DETAIL</a></li>
@@ -764,7 +764,7 @@
                                                                     <div class="overlay-effect bg-color-4"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h6 class="name">David Gunsul</h6>
+                                                                    <h6 class="name">Tunde Dada</h6>
                                                                     <div class="position">President</div>
                                                                 </div>
                                                             </div>
@@ -783,7 +783,7 @@
                                                                     <div class="overlay-effect bg-color-4"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h6 class="name">Richard Johnson</h6>
+                                                                    <h6 class="name">Adenrele Adekunle</h6>
                                                                     <div class="position">Safety Director</div>
                                                                 </div>
                                                             </div>
@@ -802,7 +802,7 @@
                                                                     <div class="overlay-effect bg-color-4"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h6 class="name">Aaron Stanley</h6>
+                                                                    <h6 class="name">Mujib Aro</h6>
                                                                     <div class="position">Project Manager</div>
                                                                 </div>
                                                             </div>
@@ -821,7 +821,7 @@
                                                                     <div class="overlay-effect bg-color-4"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h6 class="name">David Gunsul</h6>
+                                                                    <h6 class="name">Austin Lakemfa</h6>
                                                                     <div class="position">President</div>
                                                                 </div>
                                                             </div>
@@ -840,7 +840,7 @@
                                                                     <div class="overlay-effect bg-color-4"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h6 class="name">Richard Johnson</h6>
+                                                                    <h6 class="name">Malik Aro</h6>
                                                                     <div class="position">Safety Director</div>
                                                                 </div>
                                                             </div>
@@ -859,7 +859,7 @@
                                                                     <div class="overlay-effect bg-color-4"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h6 class="name">Aaron Stanley</h6>
+                                                                    <h6 class="name">Leye Sonyaolu</h6>
                                                                     <div class="position">Project Manager</div>
                                                                 </div>
                                                             </div>
@@ -878,7 +878,7 @@
                                                                     <div class="overlay-effect bg-color-4"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h6 class="name">David Gunsul</h6>
+                                                                    <h6 class="name">Biyi Adisa</h6>
                                                                     <div class="position">President</div>
                                                                 </div>
                                                             </div>
@@ -897,7 +897,7 @@
                                                                     <div class="overlay-effect bg-color-4"></div>
                                                                 </div>
                                                                 <div class="text-wrap">
-                                                                    <h6 class="name">Richard Johnson</h6>
+                                                                    <h6 class="name">Hafeez Aro</h6>
                                                                     <div class="position">Safety Director</div>
                                                                 </div>
                                                             </div>
