--- a/page-services-detail.html
+++ b/page-services-detail.html
@@ -216,7 +216,7 @@
                                         <div class="inner">
                                             <span class="item">
                                                 <span class="icon"><i class="fa fa-check-circle"></i></span>
-                                                <span class="text">Interior Design Planning</span>
+                                                <span class="text">Design-Build (Residential & Commercial)</span>
                                             </span>
                                         </div>
                                     </div><!-- /.themeslat-list -->
@@ -224,7 +224,7 @@
                                         <div class="inner">
                                             <span class="item">
                                                 <span class="icon"><i class="fa fa-check-circle"></i></span>
-                                                <span class="text">Colour & Finish Consultations</span>
+                                                <span class="text">Construction Management & Owner’s Representation</span>
                                             </span>
                                         </div>
                                     </div><!-- /.themeslat-list -->
@@ -232,7 +232,7 @@
                                         <div class="inner">
                                             <span class="item">
                                                 <span class="icon"><i class="fa fa-check-circle"></i></span>
-                                                <span class="text">Architectural & Custom Lighting</span>
+                                                <span class="text">Renovation & Adaptive Reuse</span>
                                             </span>
                                         </div>
                                     </div><!-- /.themeslat-list -->
@@ -240,7 +240,7 @@
                                         <div class="inner">
                                             <span class="item">
                                                 <span class="icon"><i class="fa fa-check-circle"></i></span>
-                                                <span class="text">Glass & Acrylic Specifications</span>
+                                                <span class="text">Real Estate Development Planning & Feasibility</span>
                                             </span>
                                         </div>
                                     </div><!-- /.themeslat-list -->
@@ -250,7 +250,7 @@
                                 <div class="themesflat-spacer clearfix" data-desktop="0" data-mobile="0" data-smobile="35"></div>  
                                 <div class="themesflat-content-box clearfix" data-margin="0 0 0 11px" data-mobilemargin="0 0 0 0">
                                     <div class="inner pd35 bg-ffc">
-                                        <h5 class="title text-white line-height-24 padding-left-7">THIS AWESOME SERVICE BRINGS FULL INTEREST INFORMATION FOR YOUR PURPOSE</h5>
+                                        <h5 class="title text-white line-height-24 padding-left-7">HB(Hafarb) BuildWorks</h5>
                                         <div class="themesflat-spacer clearfix" data-desktop="16" data-mobile="16" data-smobile="16"></div>
                                         <div class="button-wrap has-icon icon-right size-14">
                                             <a href="#" class="themesflat-button bg-white color-333 w100 font-weight-400 no-letter-spacing pd26"><span>Download .PDF <span class="icon"><i class="fa fa-file-pdf-o"></i></span></span></a>
