--- a/page-services-detail.html
+++ b/page-services-detail.html
@@ -284,21 +284,21 @@
                                 <div class="tab-content-wrap clearfix">
                                     <div class="tab-content">
                                         <div class="item-content">                                                            
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</p>                                                    
+                                            <p>HB (Hafarb) BuildWorks is a Chicago-based design-build, construction management, and real estate development firm delivering projects that balance design excellence, construction efficiency, and long-term asset value.</p>
+                                            <p>Built on a strong foundation in architecture, construction engineering, and management, we integrate planning, execution, and project controls to deliver high-quality outcomes on time and within budget. Our work is guided by BIM-enabled coordination, Lean construction principles, and disciplined project controls, ensuring clarity, efficiency, and value throughout the project lifecycle</p>                                                    
                                         </div>
                                     </div><!-- /.tab-content -->
                                     <div class="tab-content">
                                         <div class="item-content">                                                            
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</p>                                                    
+                                            <p>Beyond construction delivery, HB (Hafarb) BuildWorks brings a development-focused mindset, supporting feasibility analysis, cost modeling, and owner representation to help clients and investors make informed, value-driven decisions.</p>
+                                            <p>HB (Hafarb) BuildWorks is led by Hafeez Babs-Aro(M.Eng.), Founder & CEO, who brings over 14 years of experience in architecture, design-build, and construction delivery. The firm operates through HB BuildingWorks Inc. (USA), an affiliated U.S. entity of HB (Hafarb) Construction Ltd., originally established in 2010, with operations now expanding into the United States.</p>                                                    
                                         </div>
                                     </div><!-- /.tab-content -->
                                     <div class="tab-content">
-                                        <div class="item-content">                                                            
+                                        <!-- <div class="item-content">                                                            
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                             <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</p>                                                    
-                                        </div>
+                                        </div> -->
                                     </div><!-- /.tab-content -->
                                 </div><!-- /.tab-content-wrap -->
                             </div><!-- /.themesflat-tabs -->
