--- a/page-services-detail.html
+++ b/page-services-detail.html
@@ -295,10 +295,19 @@
                                         </div>
                                     </div><!-- /.tab-content -->
                                     <div class="tab-content">
-                                        <!-- <div class="item-content">                                                            
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</p>                                                    
-                                        </div> -->
+                                        <div class="item-content">                                                            
+                                            <p>
+                                                Core Services
+
+                                                    * Design-Build (Residential & Commercial)
+                                                    * Construction Management & Owner’s Representation
+                                                    * Renovation & Adaptive Reuse
+                                                    * Real Estate Development Planning & Feasibility
+                                                    * Cost Estimation & Budget Control (RSMeans)
+                                                    * Scheduling & Project Controls (Primavera P6, MS Project)
+                                                    * BIM & Digital Delivery (BIM 360, Navisworks, Synchro)
+                                                    * Commissioning & Quality Assurance
+                                            </p>
                                     </div><!-- /.tab-content -->
                                 </div><!-- /.tab-content-wrap -->
                             </div><!-- /.themesflat-tabs -->
