--- a/page-services-detail.html
+++ b/page-services-detail.html
@@ -308,6 +308,14 @@
                                                     * BIM & Digital Delivery (BIM 360, Navisworks, Synchro)
                                                     * Commissioning & Quality Assurance
                                             </p>
+                                            <p>
+                                                Our Approach
+
+                                                    ✔ Integrated design-build & development expertise
+                                                    ✔ Technology-driven project delivery
+                                                    ✔ Transparent, client-centered collaboration
+                                                    ✔ Safety-focused and compliance-driven execution
+                                            </p>
                                     </div><!-- /.tab-content -->
                                 </div><!-- /.tab-content-wrap -->
                             </div><!-- /.themesflat-tabs -->
