--- a/page-contact-2.html
+++ b/page-contact-2.html
@@ -359,14 +359,14 @@
                                     <li>
                                         <div class="inner">
                                             <span class="fa fa-map-marker"></span>
-                                            <span class="text">PO BOX 16122 COLLINS STREET <span class="sl">West Victoria, NewYork</span></span>
+                                            <span class="text">The firm operates through HB BuildingWorks Inc.  <span class="sl">(USA) Chicago</span></span>
                                         </div>
                                     </li>
 
                                     <li>
                                         <div class="inner">
                                             <span class="fa fa-phone"></span>
-                                            <span class="text">CALL US : (+61) 3 8376 6284</span>
+                                            <span class="text">CALL US : +1 (773)901-0254</span>
                                         </div>
                                     </li>
 
